Adding all images to folder

--- a/olin-subpages/AHS.html
+++ b/olin-subpages/AHS.html
@@ -110,8 +110,8 @@
 
         <p>The changes we made to OCO for Fall 2012 (including a new Action Plan and Group Auditions) led to an esprit de corps that was contagious.  OCO attracted additional instrumentalists during AY13-14, including first-years, an excellent clarinetist from Babson College, and Olin seniors.  This trend continued in AY14-15 and AY 15-16, at which point I realized it was time to take OCO on the road so students could experience playing in venues outside Olin College.  We started with Powers Hall at the Needham Town Hall in Fall 2016, followed by the Great Hall of the Cooper Union in New York in Spring 2017, the Mount Pleasant Retirement Home in Brookline in Spring 2018, and OCO’s first jet ride to perform at the ASEE (American Society for Engineering Education) Zone 1 International Conference in Niagara Falls in Spring 2019, captured below.</p> 
 
-        <p>{Insert picture}</p>
-        <p class="caption">2019 OCO students aboard Delta flight 5319 en route to Buffalo International Airport.</p>
+        <img class="center-img" src="../website-images/olin-images/oco_fig1.png">
+        <p class="caption">Figure 1: 2019 OCO students aboard Delta flight 5319 en route to Buffalo International Airport.</p>
 
         <b class="bold-header">My role in a conductorless orchestra</b>
         
@@ -120,7 +120,7 @@
         <p>The following are two short performance clips of OCO from 2014 and 2018, as well as earlier performance clips from 2003-05 to show growth of the orchestra.</p>
 
         <div class="centered-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/uGVKzEfd4qE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/uGVKzEfd4qE?modestbranding=0&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
         <div class="caption">OCO performing Dvorak's Eight Symphony at the May 2014 Olin Exposition. They demonstrate the teamwork and communication enabling all to lock in for the exciting accelerando to the end.</div>
@@ -188,16 +188,17 @@
             </div>
         </div>
         
-        {insert image}
-        <p class="caption">The 2018 Wired Ensemble after performances of their final project compositions during Olin’s December Expo.</p>
+        <img class="center-img" src="../website-images/olin-images/oco_fig2.png">
+
+        <p class="caption">Figure 2: The 2018 Wired Ensemble after performances of their final project compositions during Olin’s December Expo.</p>
 
         <p>For additional material from the Wired Ensemble class, including example assignments and student work, see the links below.</p>
 
         <ul>
-            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-wired-student-scores.pdf" target="_blank">Student scores examples</a></li>
-            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-wired-program.pdf" target="_blank">Wired program example</a></li>
-            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-composition-analysis.pdf" target="_blank">Composition analysis assignment example</a></li>
-            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-analysis-assignment.pdf" target="_blank">Analysis assignment examples</a></li>
+            <li><a href="../website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-wired-student-scores.pdf" target="_blank">Student scores examples</a></li>
+            <li><a href="../website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-wired-program.pdf" target="_blank">Wired program example</a></li>
+            <li><a href="../website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-composition-analysis.pdf" target="_blank">Composition analysis assignment example</a></li>
+            <li><a href="../website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-analysis-assignment.pdf" target="_blank">Analysis assignment examples</a></li>
         </ul>
     </div>
 </body>
