--- a/about.html
+++ b/about.html
@@ -47,11 +47,11 @@
 </nav>
 
 <h1>About</h1>
-<h2>A Three-Part Invention</h2>
+<h2>Three-Part Invention</h2>
 
 <body>
     <h3>Musician from a young age</h3>
-    <p>The composers of the Baroque, Classic and Romantic periods provided many of those indelible impressions of childhood that inspired and motivated the directions I would take throughout my life.  As a public performer since the age of fourteen, having won the first of a series of Young Artists’ Auditions followed by a nationally competitive scholarship to Interlochen, I spent the next decades performing myriad solo and chamber music concerts on both coasts, including concerts in New York’s Weill (Carnegie) Recital Hall and Merkin Concert Hall, Boston's Symphony Hall, Jordan Hall, and Tanglewood, as well as the Marczibanyi Teri Cultural Center in Budapest.</p>
+    <p>The composers of the Baroque, Classic and Romantic periods provided many of those indelible impressions of childhood that inspired and motivated the directions I would take throughout my life.  As a public performer since the age of fourteen, having won the first of a series of Young Artists’ Auditions followed by a nationally competitive scholarship to Interlochen, I spent the next decades performing myriad solo and chamber music concerts on both coasts, including concerts in New York’s Weill (Carnegie) Recital Hall and Merkin Concert Hall, Boston's Symphony Hall, Jordan Hall, and Tanglewood, as well as on both coasts and abroad.</p>
 
     <div class="centered-container">
         <div class="left-half" style="padding-left: 100px;">
@@ -78,7 +78,7 @@
     <p>Music had taught me how to plunge deeply into something and emerge with discovery.  This happened repeatedly, whether I was preparing for concerts, writing a piece, or analyzing a score.  In engineering school, I found myself studying for exams the same way I worked musically.  There were tremendous similarities.  So it was natural for me to want to pursue the scientific language in more than a cursory way—to speak it with a strong foundation. While at The City College of New York, I was one of two students selected nationally to receive the Society of Women Engineers/Bell Labs Scholarship in Electrical Engineering.  After graduating Summa Cum Laude in electrical engineering, I received the CCNY Engineering Alumni Award for Excellence in Electrical Engineering.  In the fall of 1987, I entered the graduate program in Electrical Engineering and Computer Science at MIT.  At the time, I planned to work on the development of a system able to follow a performer much the same way an orchestra with conductor had followed me in the past. </p>
 
     <h3>Master's & PhD from Massachusetts Institute of Technology (MIT)</h3>
-    <p>Shortly after arriving at MIT, I read that something similar had already been done. So I began to articulate a more primary goal:  namely, to create a contemporary voice from the merger of music with a topic I had become intimately connected with at MIT—<em>chaos science</em>. I believed that this science, already fuel for my musical imagination, could engender an elegant tool for artistic expression. </p>
+    <p>But shortly after arriving at MIT, I read that something similar had already been done. So I began to articulate a more primary goal:  namely, to create a contemporary voice from the merger of music with a topic I had become intimately connected with at MIT—<em>chaos science</em>. I believed that this science, already fuel for my musical imagination, could engender an elegant tool for artistic expression. </p>
 
     <p>While at MIT, I received several fellowships awarded by the Department of Electrical Engineering and Computer Science: the Vinton Hayes Fellowship in Communications, the Clarence LeBel Fellowship in Acoustics, and the Barbara and Frederick Cronin Fellowship.  Jerry Wiesner, President Emeritus of MIT, secured unsponsored research funds that supported my work for the period 1993-1995.  I also taught recitations and tutorials for various electrical engineering courses over the span of seven semesters, including Acoustics, Signals and Systems, Circuits and Electronics. </p>
 
