Fixed some font formatting and adding more supplmentary materials

--- a/music-eng-subpages/cantovario.html
+++ b/music-eng-subpages/cantovario.html
@@ -62,7 +62,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ookPBjK0iaA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </p>
 
-        <b>Figure 14</b>
+        <b>Figure 14: Poster for the 2014 MIT VMS Demo Day</b>
 
         <p>The MIT VMS subsequently invited CantoVario to participate in its Snapshot Pitches 2016, Entrepreneurial Edge Showcase 2017, and the MIT Innovation Corps (2018), a program sponsored by the National Science Foundation (NSF).  In March 2019, CantoVario was selected for the National Innovation Corps (I-Corps) sponsored by NSF and awarded a 50K grant for customer discovery.</p>
 
@@ -76,7 +76,7 @@
            
         <p>The CantoVario project has developed students’ programming and presentation skills:  Students (and alumni) assisted me in preparing and demonstrating CantoVario at the 2014 MIT Venture Mentoring Service (VMS) Demo Day, the 2016 MIT VMS Snapshot Pitches, the 2017 Entrepreneurial Edge Showcase, the 2018 keynote address for the Academy of Applied Science Young Inventors Program, and the 2019 NSF National I-Corps Teams presentations.  For the latter, each team had to prepare weekly webinar presentations on what was learned.  For our final deliverables, I-Corps required a <a href="https://drive.google.com/file/d/1O4EcHjHHpA_kC4Kch0OLn1VbLrbY9ymL/view" target="_blank">2-minute video summarizing our “Lessons Learned”</a>, i.e., what our interviewees taught us, as well as a ten-minute presentation in Nashville.</p>
            
-        <p>Read the full <a href="/website-documents/supplementary-materials/music-eng-supplementary/cantovario/A-IV-H-3-nsf-grant.pdf"></a>NSF I-Corps Backstory</p>
+        <p>Read the full <a href="/website-documents/supplementary-materials/music-eng-supplementary/cantovario/IV-H-3"></a>NSF I-Corps Backstory</p>
 
         <b>Figure 15</b>
 
