elim-ed < by musical variation

--- a/music-subpages/musical-works.html
+++ b/music-subpages/musical-works.html
@@ -50,7 +50,7 @@
 <h1>MUSICAL WORKS: COMMISSIONS AND WORLD PREMIÈRES (MUSIC IV PORTFOLIO)</h1>
 
 <div>
-    <p>>Musical variation has infused my creative process ever since I devised the original chaotic mapping technique for making musical variations of original works.</p> 
+    <p>Musical variation has infused my creative process ever since I devised the original chaotic mapping technique for making musical variations of original works.</p> 
 
     <p>Now after years of working with CantoVario, I find my compositional style has become infused with thousands of variations.  They have permeated my musical being, especially those works composed since 2011:  <em>September Quartet</em>, a large scale work that received its world première on the tenth anniversary of 9/11; the piano compositions <em>Tre Studi di Colore</em> (2012) and <em>Fuente y Variación</em> (2013); the 2017 trio (violin, cello, piano) <em>Who was Wissam Eid?</em>, and the five-movement work <em>Parallel Lives—Distant Mirrors</em> (2018) where the variation path heard by listeners during the fifth movement depends on seat location.</p>
 
