Fixed navbar & updates document links

--- a/music-eng-subpages/engineers-orchestra.html
+++ b/music-eng-subpages/engineers-orchestra.html
@@ -62,11 +62,11 @@
 
         <p>The Engineers’ Orchestra <b>develops students</b>, namely by giving them an experiential lab for leadership, teamwork, and communication skills through their collective passion for playing music.  Since its publication in January 2017, the book chapter has accumulated 450 purchased downloads, indicating significance for <b>external impact</b>, thus enabling the conductorless orchestra model to reach a larger audience, which in turn helps <b>build & sustain the college</b>’s reputation as an incubator for innovation in engineering education.</p>
 
-        <p>See <a href="/website-documents/supplementary-materials/music-eng-supplementary/engineers-orchestra/A-IV-J-1-engineers-orchestra-springer-nature.pdf">this document</a> for the full text of the book chapter "The Engineers' Orchestra: a conductorless orchestra for our time."</p>
+        <p>See <a href="../website-documents/supplementary-materials/music-eng-supplementary/engineers-orchestra/A-IV-J-1-engineers-orchestra-springer-nature.pdf" target="_blank">this document</a> for the full text of the book chapter "The Engineers' Orchestra: a conductorless orchestra for our time."</p>
 
-        <p>A follow-up paper “The Engineers’ Orchestra:  a conductorless orchestra for developing 21st century professional skills” has been accepted for publication in the Proceedings of the 2019 ASEE Zone 1 International Conference held in Niagara Falls, New York, April 11-13, 2019.  It can be accessed in <a href="/website-documents/supplementary-materials/music-eng-supplementary/engineers-orchestra/A-IV-J-2-engineers-orchestra-ASEE.pdf">here.</a></p>
+        <p>A follow-up paper “The Engineers’ Orchestra:  a conductorless orchestra for developing 21st century professional skills” has been accepted for publication in the Proceedings of the 2019 ASEE Zone 1 International Conference held in Niagara Falls, New York, April 11-13, 2019.  It can be accessed in <a href="../website-documents/supplementary-materials/music-eng-supplementary/engineers-orchestra/A-IV-J-2-engineers-orchestra-ASEE.pdf" target="_blank">here.</a></p>
 
-        <p>This paper includes the results of a four-year study on the effectiveness of OCO for building professional skills in leadership, teamwork, and effective communication.   A summary of the results show a year-to-year increase in OCO students’ understanding of leadership—including development of their own leadership ability—and student understanding of effective communication.  Student development of their own communication skills ranged from 78% to 93% of respondents.  Understanding of teamwork, and self-development of same, ranged from 78% to 88% of respondents.  The number of respondents varied from 14 to 19, depending on the given year.  Results of the full study results can be accessed in <a href="/website-documents/supplementary-materials/music-eng-supplementary/engineers-orchestra/IV-J-1-four-year-study.pdf">here.</a></p>
+        <p>This paper includes the results of a four-year study on the effectiveness of OCO for building professional skills in leadership, teamwork, and effective communication.   A summary of the results show a year-to-year increase in OCO students’ understanding of leadership—including development of their own leadership ability—and student understanding of effective communication.  Student development of their own communication skills ranged from 78% to 93% of respondents.  Understanding of teamwork, and self-development of same, ranged from 78% to 88% of respondents.  The number of respondents varied from 14 to 19, depending on the given year.  Results of the full study results can be accessed in <a href="../website-documents/supplementary-materials/music-eng-supplementary/engineers-orchestra/IV-J-1-four-year-study.pdf" target="_blank">here.</a></p>
 
         <p>The Engineers’ Orchestra contributes to the Olin ecosystem in many ways.  It links synergistically with Engineering Admissions since the engineering applicant pool is often strong in music.  It supports the efforts of the Post-graduate Planning staff to successfully place students as interns and professionals in engineering positions:  Industry has been calling for skills in leadership, teamwork, and communication for over 20 years now.  The Engineers’ Orchestra supplements the Arts, Humanities, and Social Sciences programs that teach effective communication for students in engineering colleges and universities nationwide.  It helps support engineering courses that have significant teaming components, as well as leadership positions manifested throughout the engineering community, from engineering clubs like Formula to top administration and management.</p>
 
@@ -88,7 +88,7 @@
             <li>How can I help guide our activities toward the creation of significance? </li>
         </ul>
 
-        In successful meaning-making, the leadership process becomes more distributed.  Through trial, error, and experimentation, the Olin Conductorless Orchestra evolved a distributed process of meaning-making leadership. 
+        <p>In successful meaning-making, the leadership process becomes more distributed.  Through trial, error, and experimentation, the Olin Conductorless Orchestra evolved a distributed process of meaning-making leadership.</p>
 
         <p>Effective leadership requires excellent communication and teaming skills.  Research has shown that music-making confers enhanced listening comprehension, hearing, and signal discrimination.11  OCO musicians use their instruments, eyes, and ears to communicate with each other.  In doing so, they form a community of practice, i.e., a team that encourages shared and rotated leadership.  Each musician accepts responsibility for team output and delivery goals.  Furthermore, “each team member must develop qualities of a leader such as risk taking and receptivity to new ideas and directions, in addition to technical expertise.”12  A conductorless orchestra offers a natural environment for collaboration among engineer-musicians, while building, sustaining, and contributing to a team.</p>
 
@@ -101,7 +101,7 @@
         <p>Funding for this website hub came from Olin’s Integrated Project Fund. Thanks to encouragement from Prof. Mark Somerville (Interim Provost and Dean of the Faculty), I submitted a grant proposal to the Fund which was awarded.</p>
         <p>I then worked with Luis Zuniga ’21 to build the website hub—a complex project with many moving parts and substantial content. This project was Luis’ first foray into web design using HTML, CSS and JavaScript, languages with which he had no prior experience. With a passing familiarity of functionalities that he had seen implemented on other websites, he knew more or less what features could be implemented for the ECO hub, but was continuously learning how they should be implemented. By the end of this project, he gained a better understating of common web design principles and became confident in his understanding of the abilities and limitations of the HTML and CSS markup languages, as well as the JavaScript programming language.</p>
         
-        <p>The ECO Hub can be found at <a href="https://pages.olin.edu/eco-summer2019">this page</a>.</p>
+        <p>The ECO Hub can be found at <a href="https://pages.olin.edu/eco-summer2019" target="_blank">this page</a>.</p>
 
         <p><b>END TOGGLE LIST</b></p>
 
@@ -128,15 +128,15 @@
         following example performances by the OCO 2008-2019.</p>
 
         <ol>
-            <li><a href="https://youtu.be/knulC0k1r5M">Haydn Sinfonia No. 48 in C Major, “Maria Theresia”:  first movement (Allegro), Spring 2008.</a></li>
-            <li><a href="http://www.youtube.com/watch?v=ZFd453aYudU&feature=mfu_in_order&list=UL">Composite video excerpts (Holst:  Jupiter from The Planets and Lee Jisu:  Arirang Rhapsody), Spring 2011</a></li>
-            <li><a href="https://youtu.be/yyzEQ6n6OYA">Arturo Marquez Danzon No. 2, Spring 2013</a></li>
-            <li><a href="https://www.youtube.com/watch?v=VlkAZG106ek">Beethoven Creatures of Prometheus, Fall 2015 </a></li>
-            <li><a href="https://youtu.be/zix7IweadvM">Saint-Saens Danse Bacchanale, Fall 2015 </a></li>
-            <li><a href="http://bit.ly/OCO_Dvorak9th">Dvorak Symphony No. 9 in E minor:  fourth movement (Allegro con fuoco)—Spring 2016</a></li>
-            <li><a href="https://www.youtube.com/watch?v=BA5F48usRIo">Gershwin An American in Paris:  Spring 2017 </a></li>
-            <li><a href="https://www.youtube.com/watch?v=hTNUGRU4Pl8">Mozart Serenade in Bb for 13 Winds, K. 361:  Finale—Spring 2019</a></li>
-            <li><a href="https://www.youtube.com/watch?v=a9IkNITe1fE">Berlioz “Marche Hongroise” from La Damnation de Faust:  Spring 2019</a></li>
+            <li><a href="https://youtu.be/knulC0k1r5M" target="_blank">Haydn Sinfonia No. 48 in C Major, “Maria Theresia”:  first movement (Allegro), Spring 2008.</a></li>
+            <li><a href="http://www.youtube.com/watch?v=ZFd453aYudU&feature=mfu_in_order&list=UL" target="_blank">Composite video excerpts (Holst:  Jupiter from The Planets and Lee Jisu:  Arirang Rhapsody), Spring 2011</a></li>
+            <li><a href="https://youtu.be/yyzEQ6n6OYA" target="_blank">Arturo Marquez Danzon No. 2, Spring 2013</a></li>
+            <li><a href="https://www.youtube.com/watch?v=VlkAZG106ek" target="_blank">Beethoven Creatures of Prometheus, Fall 2015 </a></li>
+            <li><a href="https://youtu.be/zix7IweadvM" target="_blank">Saint-Saens Danse Bacchanale, Fall 2015 </a></li>
+            <li><a href="http://bit.ly/OCO_Dvorak9th" target="_blank">Dvorak Symphony No. 9 in E minor:  fourth movement (Allegro con fuoco)—Spring 2016</a></li>
+            <li><a href="https://www.youtube.com/watch?v=BA5F48usRIo" target="_blank">Gershwin An American in Paris:  Spring 2017 </a></li>
+            <li><a href="https://www.youtube.com/watch?v=hTNUGRU4Pl8" target="_blank">Mozart Serenade in Bb for 13 Winds, K. 361:  Finale—Spring 2019</a></li>
+            <li><a href="https://www.youtube.com/watch?v=a9IkNITe1fE" target="_blank">Berlioz “Marche Hongroise” from La Damnation de Faust:  Spring 2019</a></li>
         </ol>
     </div>
 
