--- a/music-subpages/orch-arrangments.html
+++ b/music-subpages/orch-arrangments.html
@@ -47,14 +47,14 @@
     </ul>
 </nav>
 
-Appendices IV-K-1 and IV-K-2
-
 <body>
     <h1>100+ ORCHESTRAL ARRANGEMENTS FOR 12-22 PLAYERS (MUSIC AND ENGINEERING IV PORTFOLIO)</h1>
 
     <p><b>WHERE TO PUT THIS INFORMATION? It's not directly referenced in the dossier. (Appendix IV-K-3)</b><br>
     
-    <a href="/website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-3-yearly-arrangements.pdf">This document</a>—organized by academic year—gives orchestral arrangements that can be accessed at <a href="https://pages.olin.edu/eco-summer2019">The Engineers’ Conductorless Orchestra Hub</a>, a website offering useful resources, videos, orchestral arrangements, and blueprints to help/encourage other engineering schools to start their own conductorless orchestras, as discussed throughout this page.</p>
+        "../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-3-yearly-arrangements.pdf"
+
+    <a href="../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-3-yearly-arrangements.pdf" target="_blank">This document</a>—organized by academic year—gives orchestral arrangements that can be accessed at <a href="https://pages.olin.edu/eco-summer2019" target="_blank">The Engineers’ Conductorless Orchestra Hub</a>, a website offering useful resources, videos, orchestral arrangements, and blueprints to help/encourage other engineering schools to start their own conductorless orchestras, as discussed throughout this page.</p>
 
     <div>
         <p>Students in the Olin Conductorless Orchestra (OCO) select their own repertoire.  In general, they favor big romantic pieces typically played by 70+ musicians (~50 strings and 24 wind/brass/percussion).  But Olin has a small student body which has resulted in a nontraditional instrumentation since OCO’s inception.  This means every piece must be re-orchestrated to suit each semester’s available instruments.  For example, OCO winds and brass can outnumber the strings, and vice versa, so balance has to be achieved through often unorthodox means.</p>   
@@ -63,7 +63,7 @@ Appendices IV-K-1 and IV-K-2
             
         <p><b>Explanatory notes for the OCO re-orchestrations (arrangements of symphonic works).</b> In creating these arrangements, I strive to make OCO sound as full and varied as possible, with a wide dynamic range, different colorations, strategic doublings, and effective solos/duets.  Yet constraints exist, e.g., the comfort ranges of the OCO musicians.  Simply substituting one instrument isn’t an option:  given the eclectic instrumentation of the last 17 years, a great group sound has to be created by imaginative voice leading, unorthodox doubling (e.g., violins with glockenspiel), timbral sleight-of-hand (e.g., blending a tenor sax into an 18th century symphony), and other means. </p>
 
-        <p>Here is a short summary of my process for creating orchestral arrangements for the Olin Conductorless Orchestra. (The specific re-orchestrations mentioned below are elaborated further in <a href="/website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf">this document</a>).</b></p>
+        <p>Here is a short summary of my process for creating orchestral arrangements for the Olin Conductorless Orchestra. (The specific re-orchestrations mentioned below are elaborated further in <a href="../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf" target="_blank">this document</a>).</b></p>
 
         <ul>
             <li>At the start of each semester I ask students for their comfortable high and low <em>forte</em> notes and high/low <em>piano</em> notes.  These often dictate what I can and cannot do, resulting in re-orchestrations particular to student instrumentalists.  This is one of the reasons why my arrangements may be useful to other engineering schools wishing to start their own conductorless orchestras.</li>
@@ -95,7 +95,7 @@ Appendices IV-K-1 and IV-K-2
             <li>And finally, something I always try to do:  everyone plays at the end of a piece—at least one note! </li>
         </ul>
 
-        <p><a href="/website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf">This document</a> examines seven of my orchestral arrangements, showing how I created stylistic consistency and a coherent group sound for OCO despite eclectic instrumentation and unbalanced wind, brass, and string sections.  Scores of these orchestral arrangements can be found in <a href="/website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-2-arrangement-scores.pdf">this document</a>.</p>
+        <p><a href="../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf" target="_blank">This document</a> examines seven of my orchestral arrangements, showing how I created stylistic consistency and a coherent group sound for OCO despite eclectic instrumentation and unbalanced wind, brass, and string sections.  Scores of these orchestral arrangements can be found in <a href="../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-2-arrangement-scores.pdf" target="_blank">this document</a>.</p>
 
         <p><b>In sum</b>, by creating orchestral arrangements for the Olin Conductorless Orchestra, I demonstrated <em>Leadership and Impact</em> across Olin’s faculty goals of developing students, external impact, and building & sustaining the College (Map 1).  These arrangements enabled our students and community to have an orchestra for the past 17 years—despite an eclectic array of available instruments—an orchestra that has helped students grow, both as players and listeners; an orchestra that has had a positive impact on prospective students, their families, and wider communities outside Olin; an orchestra that by virtue of its being conductorless has contributed to Olin’s reputation for innovation in engineering education.  Thus, though Project K lies in the music space, it also inhabits the engineering space (Map 2).  The table below captures the role played by each of my three overarching themes in producing these arrangements, thus elaborating upon Map 3. </p>
 
