--- a/olin-subpages/AHS.html
+++ b/olin-subpages/AHS.html
@@ -72,7 +72,7 @@
     <h3>I. The Olin Conductorless Orchestra: Offered Every Semester, 2002-Present</h3>
 
     <div>
-        <b class="bold-header">What in the life of an Engineering School makes a conductorless orchestra possible?</b>
+        <p style="font-weight: bold;">What in the life of an Engineering School makes a conductorless orchestra possible?</p>
         
         <p>Firstly, a universal call throughout industry for engineering graduates who can work well in teams, assume, leadership, and communicate effectively.  At Olin, these were founding precepts of the College.  During the first week of meetings in Fall 2000 when Olin’s Founding Faculty of 12 sat together and started discussing possible avenues for the curriculum, these three professional skills were front and center.</p>
 
