--- a/index.html
+++ b/index.html
@@ -8,34 +8,33 @@
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 
-<!-- Navigation Bar -->
 <nav class="navbar">
     <ul>
         <li><a href="index.html">HOME</a></li>
         
         <li><a href="about.html">ABOUT</a></li>
         <li><a>MUSIC</a>
-            <ul id="dropdown">
+            <ul>
                 <li><a href="music-subpages/musical-works.html">MUSICAL WORKS</a></li>
                 <li><a href="music-subpages/orch-arrangments.html">ORCHESTRAL ARRANGEMENTS</a></li>
                 <li><a href="music-subpages/scores.html">SCORES</a></li>
             </ul>
         </li>
         <li><a>MUSIC & ENGINEERING</a>
-            <ul id="dropdown">
+            <ul>
                 <li><a href="music-eng-subpages/publication-science.html">PUBLICATION IN SCIENCE</a></li>
                 <li><a href="music-eng-subpages/cantovario.html">CANTOVARIO</a></li>
                 <li><a href="music-eng-subpages/engineers-orchestra.html">ENGINEERS' ORCHESTRA</a></li>
             </ul>
         </li>
         <li><a>ENGINEERING</a>
-            <ul id="dropdown">
+            <ul>
                 <li><a href="eng-subpages/masters.html">MASTER'S THESIS</a></li>
                 <li><a href="eng-subpages/patents-trademarks.html">PATENTS & TRADEMARKS</a></li>
             </ul>
         </li>
         <li><a>BUILDING OLIN</a>
-            <ul id="dropdown">
+            <ul>
                 <li><a href="olin-subpages/AHS.html">AHS CURRICULUM</a></li>
                 <li><a href="olin-subpages/ECE.html">ECE CURRICULUM</a></li>
                 <li><a href="olin-subpages/integrated-eng.html">INTEGRATED ENGINEERING & MUSIC/AHS</a></li>
@@ -43,7 +42,6 @@
                 <li><a href="olin-subpages/music-program.html">CREATING A MUSIC PROGRAM FROM SCRATCH</a></li>
             </ul>
         </li>
-        <li><a href=#>ARCHIVE</a></li>
     </ul>
 </nav>
 
@@ -53,7 +51,7 @@
 
 <body>
     <div class="bio-container">
-        <img src="website-images/diana_outside.JPG" alt="Headshot of Diana" class="headshot">
+        <img src="website-images/Diana Dabby 2022-20.jpg" alt="Headshot of Diana" class="headshot">
 
             <p>Diana Dabby has taught at MIT, Tufts University, and the Juilliard School.  She holds degrees in music and electrical engineering from Vassar, Mills, C.C.N.Y., and MIT.</p>
 
