--- a/music-eng-subpages/grants.html
+++ b/music-eng-subpages/grants.html
@@ -12,7 +12,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar">
     <ul>
-        <li><a href="index.html">HOME</a></li>
+        <li><a href="../index.html">HOME</a></li>
         <li><a href="../about.html">ABOUT</a></li>
         <li><a>MUSIC</a>
             <ul id="dropdown">
