--- a/eng-subpages/masters.html
+++ b/eng-subpages/masters.html
@@ -1,49 +1,118 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Diana Dabby's Portfolio</title>
-
+<html lang="en">
+    <!-- Import Bootstrap and CSS -->
+  <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../assets/css/styles.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+    crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
-<!-- Navigation Bar -->
-<nav class="navbar">
-    <ul>
-        <li><a href="../index.html">HOME</a></li>
-        <li><a href="../about.html">ABOUT</a></li>
-        <li><a>MUSIC</a>
-            <ul id="dropdown">
-                <li><a href="../music-subpages/musical-works.html">MUSICAL WORKS</a></li>
-                <li><a href="../music-subpages/orch-arrangments.html">ORCHESTRAL ARRANGEMENTS</a></li>
-                <li><a href="../music-subpages/scores.html">SCORES</a></li>
-            </ul>
-        </li>
-        <li><a>MUSIC & ENGINEERING</a>
-            <ul id="dropdown">
-                <li><a href="../music-eng-subpages/publication-science.html">PUBLICATION IN SCIENCE</a></li>
-                <li><a href="../music-eng-subpages/cantovario.html">CANTOVARIO</a></li>
-                <li><a href="../music-eng-subpages/engineers-orchestra.html">ENGINEERS' ORCHESTRA</a></li>
-            </ul>
-        </li>
-        <li><a>ENGINEERING</a>
-            <ul id="dropdown">
-                <li><a href="../eng-subpages/masters.html">MASTER'S THESIS</a></li>
-                <li><a href="../eng-subpages/patents-trademarks.html">PATENTS & TRADEMARKS</a></li>
-            </ul>
-        </li>
-        <li><a>BUILDING OLIN</a>
-            <ul id="dropdown">
-                <li><a href="../olin-subpages/AHS.html">AHS CURRICULUM</a></li>
-                <li><a href="../olin-subpages/ECE.html">ECE CURRICULUM</a></li>
-                <li><a href="../olin-subpages/integrated-eng.html">INTEGRATED ENGINEERING & MUSIC/AHS</a></li>
-                <li><a href="../olin-subpages/first-year.html">THE FIRST YEAR</a></li>
-                <li><a href="../olin-subpages/music-program.html">CREATING A MUSIC PROGRAM FROM SCRATCH</a></li>
-            </ul>
-        </li>
-        <li><a href=#>ARCHIVE</a></li>
-    </ul>
-</nav>
+  <body>
+    <!-- Responsive navbar -->
+    <nav class="navbar navbar-expand-md bg-light navbar-light">
+        <div class="container">
+            <a href="#" class="navbar-brand">DD</a>
+            
+            <!-- Hamburger collapse button -->
+            <button class="navbar-toggler" type="button"
+            data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
+            <div class="collapse navbar-collapse" id="navmenu"> <!-- allow
+            collapse on smaller screens -->
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="about.html" class="nav-link">About</a>
+                    </li>
+                    
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../music.html"
+                        id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false">Music</a>
+                        <ul class="dropdown-menu"
+                        aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item"
+                          href="../music-subpages/musical-works.html">Musical
+                          Works</a></li>
+                          <li><a class="dropdown-item"
+                          href="../music-subpages/orch-arrangements.html">Orchestral
+                          Arrangements</a></li>
+                          <li><a class="dropdown-item"
+                          href="../music-subpages/scores.html">Scores</a></li>
+                        </ul>
+                      </li>
+
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="../music-eng.html"
+                    id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">Music & Engineering</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item"
+                        href="../music-eng-subpages/cantovario.html">CantoVario</a></li>
+                        <li><a class="dropdown-item"
+                        href="../music-eng-subpages/engineers-orch.html">Engineers'
+                        Orchestra</a></li>
+                        <li><a class="dropdown-item"
+                        href="../music-eng-subpages/publication-science.html">Publication
+                        in Science</a></li>
+                    </ul>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../eng.html"
+                        id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false">Engineering</a>
+                        <ul class="dropdown-menu"
+                        aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item"
+                            href="masters.html">Master's</a></li>
+                            <li><a class="dropdown-item"
+                            href="patents-trademarks.html">Patents &
+                            Trademarks</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../olin.html"
+                        id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">Building
+                        Olin</a>
+                        <ul class="dropdown-menu"
+                        aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item"
+                            href="../olin-subpages/ahs.html">AHS</a></li>
+                            <li><a class="dropdown-item"
+                            href="../olin-subpages/ece.html">ECE</a></li>
+                            <li><a class="dropdown-item"
+                            href="../olin-subpages/first-year.html">First
+                            Year</a></li>
+                            <li><a class="dropdown-item"
+                            href="../olin-subpages/integrated-eng.html">Integrated
+                            Engineering</a></li>
+                            <li><a class="dropdown-item"
+                            href="../olin-subpages/music-program.html">Music
+                            Program</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container">
+    </div>
+  </body>
 </html>
