--- a/eng-subpages/patents-trademarks.html
+++ b/eng-subpages/patents-trademarks.html
@@ -1,69 +1,197 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Diana Dabby's Portfolio</title>
-
+<html lang="en">
+    <!-- Import Bootstrap and CSS -->
+  <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../assets/css/styles.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+    crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
-<!-- Navigation Bar -->
-<nav class="navbar">
-    <ul>
-        <li><a href="../index.html">HOME</a></li>
-        <li><a href="../about.html">ABOUT</a></li>
-        <li><a>MUSIC</a>
-            <ul id="dropdown">
-                <li><a href="../music-subpages/musical-works.html">MUSICAL WORKS</a></li>
-                <li><a href="../music-subpages/orch-arrangments.html">ORCHESTRAL ARRANGEMENTS</a></li>
-                <li><a href="../music-subpages/scores.html">SCORES</a></li>
-            </ul>
-        </li>
-        <li><a>MUSIC & ENGINEERING</a>
-            <ul id="dropdown">
-                <li><a href="../music-eng-subpages/publication-science.html">PUBLICATION IN SCIENCE</a></li>
-                <li><a href="../music-eng-subpages/cantovario.html">CANTOVARIO</a></li>
-                <li><a href="../music-eng-subpages/engineers-orchestra.html">ENGINEERS' ORCHESTRA</a></li>
-            </ul>
-        </li>
-        <li><a>ENGINEERING</a>
-            <ul id="dropdown">
-                <li><a href="../eng-subpages/masters.html">MASTER'S THESIS</a></li>
-                <li><a href="../eng-subpages/patents-trademarks.html">PATENTS & TRADEMARKS</a></li>
-            </ul>
-        </li>
-        <li><a>BUILDING OLIN</a>
-            <ul id="dropdown">
-                <li><a href="../olin-subpages/AHS.html">AHS CURRICULUM</a></li>
-                <li><a href="../olin-subpages/ECE.html">ECE CURRICULUM</a></li>
-                <li><a href="../olin-subpages/integrated-eng.html">INTEGRATED ENGINEERING & MUSIC/AHS</a></li>
-                <li><a href="../olin-subpages/first-year.html">THE FIRST YEAR</a></li>
-                <li><a href="../olin-subpages/music-program.html">CREATING A MUSIC PROGRAM FROM SCRATCH</a></li>
-            </ul>
-        </li>
-        <li><a href=#>ARCHIVE</a></li>
-    </ul>
-</nav>
+  <body>
+    <!-- Responsive navbar -->
+    <nav class="navbar navbar-expand-md bg-light navbar-light">
+        <div class="container">
+            <a href="#" class="navbar-brand">DD</a>
+            
+            <!-- Hamburger collapse button -->
+            <button class="navbar-toggler" type="button"
+            data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-<h1>PATENTS AND TRADEMARKS ARISING FROM THE CANTOVARIO PROJECT, ISSUED BY THE USPTO (ECE AND MUSIC IV PORTFOLIO)</h1>
+            <div class="collapse navbar-collapse" id="navmenu"> <!-- allow
+            collapse on smaller screens -->
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="about.html" class="nav-link">About</a>
+                    </li>
+                    
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../music.html"
+                        id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false">Music</a>
+                        <ul class="dropdown-menu"
+                        aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item"
+                          href="../music-subpages/musical-works.html">Musical
+                          Works</a></li>
+                          <li><a class="dropdown-item"
+                          href="../music-subpages/orch-arrangements.html">Orchestral
+                          Arrangements</a></li>
+                          <li><a class="dropdown-item"
+                          href="../music-subpages/scores.html">Scores</a></li>
+                        </ul>
+                      </li>
 
-<div>
-    <p>The Intellectual Property (IP) now described arose from my work known as the CantoVario Project (later described in Section IV-H, since it unites all three Olin faculty goals of External Impact, Developing Students, and Building & Sustaining the College).  This interdisciplinary work harnesses chaotic system variability to produce musical variation.  In wearing an engineer’s cap and listening to the musician within, I devised chaotic mapping algorithms that provide the engine for making musical variations of an original work.  Based on a natural mechanism for variability found in dissipative chaotic systems, i.e., the sensitivity of their solutions to initial conditions, this variation technique employs two chaotic trajectories that map the events of a musical work into a variation based on the original piece. The variations can be close to the original, diverge from it substantially, or achieve degrees of variability between these two extremes.  The technique can serve as an idea generator or as a springboard for a dynamic music where a work changes from one hearing to the next—not in random ways—but rather by musical choice.  The technique does not generate music or any other kind of data as random events; rather, it creates a rich set of variations on an already completed piece or sequence of symbols.</p>
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="../music-eng.html"
+                    id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">Music & Engineering</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item"
+                        href="../music-eng-subpages/cantovario.html">CantoVario</a></li>
+                        <li><a class="dropdown-item"
+                        href="../music-eng-subpages/engineers-orch.html">Engineers'
+                        Orchestra</a></li>
+                        <li><a class="dropdown-item"
+                        href="../music-eng-subpages/publication-science.html">Publication
+                        in Science</a></li>
+                    </ul>
+                    </li>
 
-    <p>Despite its ability to produce variations that can be delightful—appealing to musicians and non-musicians alike—the original chaotic mapping of my earlier IP and papers has limitations.  For instance, it only encompassed one algorithm, whereas the “improved chaotic mapping” described in my 2016 patents offers multiple variation techniques, and uses them to generate variations not only of a discrete-time signal representation of a source piece, e.g., MIDI file scores, prose, poetry, etc., but also variations of continuous-time signal representations of a work, e.g., audio recording, film, video, spoken word art, video games, and so on.</p>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../eng.html"
+                        id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false">Engineering</a>
+                        <ul class="dropdown-menu"
+                        aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item"
+                            href="masters.html">Master's</a></li>
+                            <li><a class="dropdown-item"
+                            href="patents-trademarks.html">Patents &
+                            Trademarks</a></li>
+                        </ul>
+                    </li>
 
-    <p>The patent applications (granted and pending) listed in the accompanying curriculum vitae cover my algorithms for generating musical variation.  They arose from Project H (CantoVario).  I have spent a number of years creating these algorithms which are specific to me and show evidence of what I do.  Together they underpin the MIDI and audio sides of applications I’ve developed—known collectively as “CantoVario.”   My 2010 Provisional, 2011 Utility, and 2012 Preliminary Amendment patent applications were issued by the USPTO (United States Patent and Trademark Office) in March 2016.  On the advice of my team at the MIT Venture Mentoring Service (VMS), I filed trademark applications to register the marks “CantoVario” and “EnginArt” with the USPTO (granted 2014 and 2015, respectively), as well as the 2014 Continuation in Part (granted 2016).</p>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../olin.html"
+                        id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">Building
+                        Olin</a>
+                        <ul class="dropdown-menu"
+                        aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item"
+                            href="../olin-subpages/ahs.html">AHS</a></li>
+                            <li><a class="dropdown-item"
+                            href="../olin-subpages/ece.html">ECE</a></li>
+                            <li><a class="dropdown-item"
+                            href="../olin-subpages/first-year.html">First
+                            Year</a></li>
+                            <li><a class="dropdown-item"
+                            href="../olin-subpages/integrated-eng.html">Integrated
+                            Engineering</a></li>
+                            <li><a class="dropdown-item"
+                            href="../olin-subpages/music-program.html">Music
+                            Program</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <p>My latest patent application (provisional + utility submitted 2017-18, pending) includes the new variation  algorithms that produced the mash-ups currently on www.cantovario.com.  They capture a breakthrough algorithm that occurred to me one morning in June 2017.   The breakthrough algorithm enables complete mashups of songs, so that the mashups themselves constitute fully formed songs.  I filed a Provisional patent application in September 2017 and a follow-up Utility patent application in September 2018.  N.B:  A mashup is a form of musical variation; e.g., J.S. Bach wrote a mashup for the 30th variation of his Goldberg Variations.</p>
+    <div class="container">
+        <h1>Patents & Trademarks Arising from the CantoVario Project, Issues by
+        the USPTO</h1>
 
-    <p>The CantoVario project is discussed to a greater extent in <a href="../music-eng-subpages/cantovario.html" >"CantoVario"</a>.</p>
+        <p>The Intellectual Property (IP) now described arose from my work known
+        as the CantoVario Project (later described in Section IV-H, since it
+        unites all three Olin faculty goals of External Impact, Developing
+        Students, and Building & Sustaining the College).  This
+        interdisciplinary work harnesses chaotic system variability to produce
+        musical variation.  In wearing an engineer’s cap and listening to the
+        musician within, I devised chaotic mapping algorithms that provide the
+        engine for making musical variations of an original work.  Based on a
+        natural mechanism for variability found in dissipative chaotic systems,
+        i.e., the sensitivity of their solutions to initial conditions, this
+        variation technique employs two chaotic trajectories that map the events
+        of a musical work into a variation based on the original piece. The
+        variations can be close to the original, diverge from it substantially,
+        or achieve degrees of variability between these two extremes.  The
+        technique can serve as an idea generator or as a springboard for a
+        dynamic music where a work changes from one hearing to the next—not in
+        random ways—but rather by musical choice.  The technique does not
+        generate music or any other kind of data as random events; rather, it
+        creates a rich set of variations on an already completed piece or
+        sequence of symbols.</p>
 
-    <p>View my <a href="../website-documents/supplementary-materials/eng-supplementary/III-F-patents-trademarks.pdf" target="_blank">recent patents</a> issued by the USPTO.</p>
+        <p>Despite its ability to produce variations that can be
+        delightful—appealing to musicians and non-musicians alike—the original
+        chaotic mapping of my earlier IP and papers has limitations.  For
+        instance, it only encompassed one algorithm, whereas the “improved
+        chaotic mapping” described in my 2016 patents offers multiple variation
+        techniques, and uses them to generate variations not only of a
+        discrete-time signal representation of a source piece, e.g., MIDI file
+        scores, prose, poetry, etc., but also variations of continuous-time
+        signal representations of a work, e.g., audio recording, film, video,
+        spoken word art, video games, and so on.</p>
 
-    <p>In sum, the patents (and trademarks) arising from my musical variations/chaos science projects show Leadership and Impact with respect to Olin’s faculty goal of External Impact since they underpin original and innovative work (the CantoVario Project) recognized by the National Science Foundation (NSF), the MIT Venture Mentoring Service (VMS), the USPTO, and the journal Science.  Like the Science article, they fuse the disciplines of music and engineering (Map 2).  The thematic table below captures the role played by each of three overarching themes in creating and writing these patents, thus providing detail for Map 3.</p>
+        <p>The patent applications (granted and pending) listed in the
+        accompanying curriculum vitae cover my algorithms for generating musical
+        variation.  They arose from Project H (CantoVario).  I have spent a
+        number of years creating these algorithms which are specific to me and
+        show evidence of what I do.  Together they underpin the MIDI and audio
+        sides of applications I’ve developed—known collectively as “CantoVario.”
+        My 2010 Provisional, 2011 Utility, and 2012 Preliminary Amendment patent
+        applications were issued by the USPTO (United States Patent and
+        Trademark Office) in March 2016.  On the advice of my team at the MIT
+        Venture Mentoring Service (VMS), I filed trademark applications to
+        register the marks “CantoVario” and “EnginArt” with the USPTO (granted
+        2014 and 2015, respectively), as well as the 2014 Continuation in Part
+        (granted 2016).</p>
 
-    <b>INCLUDE INFO ABOUT MAP?</b>
-</div>
+        <p>My latest patent application (provisional + utility submitted
+        2017-18, pending) includes the new variation  algorithms that produced
+        the mash-ups currently on www.cantovario.com.  They capture a
+        breakthrough algorithm that occurred to me one morning in June 2017.
+        The breakthrough algorithm enables complete mashups of songs, so that
+        the mashups themselves constitute fully formed songs.  I filed a
+        Provisional patent application in September 2017 and a follow-up Utility
+        patent application in September 2018.  N.B:  A mashup is a form of
+        musical variation; e.g., J.S. Bach wrote a mashup for the 30th variation
+        of his Goldberg Variations.</p>
+
+        <p>The CantoVario project is discussed to a greater extent in <a
+        href="../music-eng-subpages/cantovario.html" >"CantoVario"</a>.</p>
+
+        <p>View my <a
+        href="../docs/supplementary-materials/eng-supplementary/III-F-patents-trademarks.pdf"
+        target="_blank">recent patents</a> issued by the USPTO.</p>
+
+        <p>In sum, the patents (and trademarks) arising from my musical
+        variations/chaos science projects show Leadership and Impact with
+        respect to Olin’s faculty goal of External Impact since they underpin
+        original and innovative work (the CantoVario Project) recognized by the
+        National Science Foundation (NSF), the MIT Venture Mentoring Service
+        (VMS), the USPTO, and the journal Science.  Like the Science article,
+        they fuse the disciplines of music and engineering (Map 2).  The
+        thematic table below captures the role played by each of three
+        overarching themes in creating and writing these patents, thus providing
+        detail for Map 3.</p>
+
+        <b>INCLUDE INFO ABOUT MAP?</b>
+    </div>
+  </body>
 </html>
