Adding V3 files. All content has been uploaded

--- a/eng-subpages/patents-trademarks.html
+++ b/eng-subpages/patents-trademarks.html
@@ -30,10 +30,10 @@
             collapse on smaller screens -->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="../index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">About</a>
+                        <a href="../about.html" class="nav-link">About</a>
                     </li>
                     
                     <li class="nav-item dropdown">
@@ -191,7 +191,7 @@
         overarching themes in creating and writing these patents, thus providing
         detail for Map 3.</p>
 
-        <b>INCLUDE INFO ABOUT MAP?</b>
+        <img class="center-img" src="../images/eng-images/patents-chart.JPG">
     </div>
   </body>
 </html>
