--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="d-grid gap-2 d-md-flex mx-auto">
                 <a class="btn btn-outline-dark mx-auto" href="about.html" role="button">More About Diana</a>
 
-                <a class="btn btn-outline-dark mx-auto" href="website-documents/Diana Dabby CV.pdf" download  target="_blank" role="button">Curriculum Vitae</a>
+                <a class="btn btn-outline-dark mx-auto" href="docs/Diana Dabby CV.pdf" download  target="_blank" role="button">Curriculum Vitae</a>
             </div>
         
         <!-- A Three Part Story -->
@@ -97,18 +97,18 @@
             <div class="col">
                 <b>Pianist & Composer</b>
                 <p>As a concert pianist and composer, my work has been heard in New York at Weill (Carnegie) Recital Hall and Merkin Concert Hall; in Boston at Jordan Hall and Symphony Hall; at Tanglewood; on both coasts and abroad. My latest work featured a concert of "Variations and Shadows", where seat location determined what a listener heard. At Olin College, I've produced 306 concerts, performing as a pianist in 75 of them.</p>
-                <a class="btn btn-outline-dark mb-4" href="#" role="button">Learn More</a>
+                <a class="btn btn-outline-dark mb-4" href="music-subpages/musical-works.html" role="button">Learn More</a>
             </div>
             <div class="col">
                 <b>Engineer & Inventor</b>
                 <p>As an engineer, I hold a Master’s and Doctorate in Electrical Engineering and Computer Science from MIT. My doctoral thesis combined chaos science and electrical engineering to create musical variations of the pitch sequence of a midi song. I've since invented techniques for creating rhythmic and pitch variations of midi and audio songs, including mashups. This work has been awarded $300k in NSF grants for research and development.</p>
-                <a class="btn btn-outline-dark mb-4" href="#" role="button">Learn More</a>
+                <a class="btn btn-outline-dark mb-4" href="eng-subpages/masters.html" role="button">Learn More</a>
             </div>
             <div class="col">
                 <b>Entrepreneurial Thinker</b>
                 <p class="fst-italic" style="font-size: 11px">where entrepreneurship is the ability to articulate a vision and bring it to fruition.</p>
                 <p>I've articulated and realized a dynamic music that changes from one hearing to the next, much in the same way a river changes from season-to-season but is recognizable in its essence. Towards this end, I've developed CantoVario, a project that encompasses all my work with musical variation, chaos science, signal processing, and acoustics.</p>
-                <a class="btn btn-outline-dark mb-4" href="#" role="button">Learn More</a>
+                <a class="btn btn-outline-dark mb-4" href="music-eng-subpages/cantovario.html" role="button">Learn More</a>
             </div>
         </div>
     </div>
