--- a/music-eng-subpages/publication-science.html
+++ b/music-eng-subpages/publication-science.html
@@ -83,7 +83,7 @@
             
         <p>In sum, my invited Perspectives article, “Creating Musical Variation”, demonstrates Leadership and Impact with respect to Olin’s faculty goal of External Impact (Map 1), by virtue of its publication in Science.  The article fuses the disciplines of music and engineering (Map 2).  The table below succinctly captures the role played by each of my three overarching themes in Project E, thus elaborating on Map 3.</p>
 
-        <b>Insert about three overarching teams</b>
+        <img class="center-img" src="../images/music-eng-images/pub-science-chart.JPG">
 
     </div>
   </body>
