--- a/music-subpages/orch-arrangements.html
+++ b/music-subpages/orch-arrangements.html
@@ -309,7 +309,7 @@
             themes in producing these arrangements, thus elaborating upon Map 3.
             </p>
 
-            <b>include chart?</b>
+            <img class="center-img" src="../images/music-images/orch-arrangements-chart.JPG">
     </div>
   </body>
 </html>
