--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
         <h3>Joining a brand-new college: Olin College of Engineering</h3>
         <p>Then in January 2000, I saw an ad for a college that didn’t exist yet:  Olin College of Engineering.  Olin was hiring faculty to help design a school that would offer four-year tuition scholarships to all admitted students, including room and board.  Such a generous gesture inspired me:  I imagined a good student from modest means reading about this new college, becoming motivated to reach for it, and thus access all Olin had to offer, regardless of ability to finance such an education.  Realizing this was a once in two lifetimes’ opportunity and that Olin would attract excellent students, I applied.  Despite receiving offers from several colleges and universities in Spring 2000, I chose Olin, a decision I’ve never regretted.  Yet when I signed that first five-year contract, I had no idea what the future would hold.  In a sense, that was part of its appeal.  Perhaps the biggest surprise has been the addition of another ‘hat’, an entrepreneurial ‘hat’ to those I already wear:  musician (composer, pianist, orchestrator), educator, and electrical engineer.  Many of my heroes—all those dead composers—also had entrepreneurial streaks.  They were able to take an idea from inception to full realization, an undertaking that defines entrepreneurship.   My musical variation projects now span music, electrical engineering, and entrepreneurial thinking, resulting in a “three-part invention.” </p>
      
-        <a class="btn btn-outline-dark mb-4 text-center" href="olin.html" role="button">More on Building Olin</a>
+        <a class="btn btn-outline-dark mb-4 text-center" href="olin-subpages/ahs.html" role="button">More on Building Olin</a>
     </div>
 
   </body>
