--- a/music-subpages/musical-works.html
+++ b/music-subpages/musical-works.html
@@ -75,7 +75,7 @@
     <div class="container">
         <h1 class="mt-4">Musical Works: Commissions & World Premières (Music IV Portfolio)</h1>
 
-        <p>Musical variation has infused my creative process ever since I devised 
+        <p>z Musical variation has infused my creative process ever since I devised 
             the original chaotic mapping technique for making musical variations 
             of original works.</p> 
 
