finished pats and TMs

--- a/eng-subpages/patents-trademarks.html
+++ b/eng-subpages/patents-trademarks.html
@@ -118,12 +118,12 @@
 
         <p>The Intellectual Property (IP) now described arose from my work known
         as the CantoVario Project (later described in Section IV-H, since it
-        unites all three Olin faculty goals of External Impact, Developing
-        Students, and Building & Sustaining the College).  This
+        unites goals of External Impact, Developing
+        Students, and Building & Sustaining Olin  College).  This
         interdisciplinary work harnesses chaotic system variability to produce
         musical variation.  In wearing an engineer’s cap and listening to the
         musician within, I devised chaotic mapping algorithms that provide the
-        engine for making musical variations of an original work.  Based on a
+        engine for making musical variations of original works.  Based on a
         natural mechanism for variability found in dissipative chaotic systems,
         i.e., the sensitivity of their solutions to initial conditions, this
         variation technique employs two chaotic trajectories that map the events
@@ -162,14 +162,11 @@
         2014 and 2015, respectively), as well as the 2014 Continuation in Part
         (granted 2016).</p>
 
-        <p>My latest patent application (provisional + utility submitted
-        2017-18, pending) includes the new variation  algorithms that produced
-        the mash-ups currently on www.cantovario.com.  They capture a
-        breakthrough algorithm that occurred to me one morning in June 2017.
-        The breakthrough algorithm enables complete mashups of songs, so that
-        the mashups themselves constitute fully formed songs.  I filed a
-        Provisional patent application in September 2017 and a follow-up Utility
-        patent application in September 2018.  N.B:  A mashup is a form of
+        <p>A utility patent awarded in June 2020
+        covers variation  algorithms that produce
+        the mash-ups currently on www.cantovario.com.  They're based on a 
+        breakthrough idea that occurred to me one morning in June 2017, enabling complete mashups of songs, so that
+        the mashups themselves constitute fully formed songs.  N.B:  A mashup is a form of
         musical variation; e.g., J.S. Bach wrote a mashup for the 30th variation
         of his Goldberg Variations.</p>
 
@@ -181,15 +178,14 @@
         target="_blank">recent patents</a> issued by the USPTO.</p>
 
         <p>In sum, the patents (and trademarks) arising from my musical
-        variations/chaos science projects show Leadership and Impact with
-        respect to Olin’s faculty goal of External Impact since they underpin
+        variations/chaos science projects show 
         original and innovative work (the CantoVario Project) recognized by the
         National Science Foundation (NSF), the MIT Venture Mentoring Service
-        (VMS), the USPTO, and the journal Science.  Like the Science article,
-        they fuse the disciplines of music and engineering (Map 2).  The
-        thematic table below captures the role played by each of three
-        overarching themes in creating and writing these patents, thus providing
-        detail for Map 3.</p>
+        (VMS), the USPTO, the journal Science, and most recently a 2024-25 Radcliffe Fellowship.  Like the Science article,
+        they fuse the disciplines of music and engineering.  The
+        thematic table below captures the role played by each of my three
+        overarching themes (lifelong learning, intrinsic motivation, the creative process) in devising and writing these patents.  </p>
+        <!-- map 3. -->
 
         <img class="center-img" src="../images/eng-images/patents-chart.JPG">
     </div>
